5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1578_2896.log
== TEST (2019-03-16 17:32:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim") 

# Impressao de saidas
print(var("giseli jardim"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("giseli jardim"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 17:32:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim") 

# Impressao de saidas
print(var("giseli jardim"))
-- EXECUTION TIME:
0.159041
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/2896/main.py", line 7, in <module>
    print(var("giseli jardim"))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:32:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim") 

# Impressao de saidas
print(var("giseli jardim"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("giseli jardim"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 17:33:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim") 

# Impressao de saidas
print(var("giseli jardim"))
-- EXECUTION TIME:
0.122598
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/2896/main.py", line 7, in <module>
    print(var("giseli jardim"))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:33:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim:") 

# Impressao de saidas
print(var("giseli jardim:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("giseli jardim:"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 17:33:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim:") 

# Impressao de saidas
print(var("giseli jardim:"))
-- EXECUTION TIME:
0.136954
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/2896/main.py", line 7, in <module>
    print(var("giseli jardim:"))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:34:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim:") 

# Impressao de saidas
print(var"giseli jardim:")
-- ERROR:
File "XXXX", line 7
    print(var"giseli jardim:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:34:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim:") 

# Impressao de saidas
print("giseli jardim:")
-- OUTPUT:
giseli jardim:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 17:34:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim:") 

# Impressao de saidas
print("giseli jardim:")
-- EXECUTION TIME:
0.151541
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
giseli jardim:
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
giseli jardim:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:35:05) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim:") 

# Impressao de saidas
print(var) ("giseli jardim:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var) ("giseli jardim:")
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 17:35:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim:") 

# Impressao de saidas
print(var) ("giseli jardim:")
-- EXECUTION TIME:
0.139779
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/2896/main.py", line 7, in <module>
    print(var) ("giseli jardim:")
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:35:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim: ") 

# Impressao de saidas
print(var) ("giseli jardim: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var) ("giseli jardim: ")
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 17:35:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim: ") 

# Impressao de saidas
print(var) ("giseli jardim: ")
-- EXECUTION TIME:
0.222612
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/2896/main.py", line 7, in <module>
    print(var) ("giseli jardim: ")
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:37:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim: ") 
# Impressao de saidas
print("var("giseli jardim:)")
-- ERROR:
File "XXXX", line 6
    print("var("giseli jardim:)")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:37:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim: ") 
# Impressao de saidas
print("var(giseli jardim:)")
-- OUTPUT:
var(giseli jardim:)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 17:37:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim: ") 
# Impressao de saidas
print("var(giseli jardim:)")
-- EXECUTION TIME:
0.127414
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
var(giseli jardim:)
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
var(giseli jardim:)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:38:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim: ") 
# Impressao de saidas
print("var("giseli jardim: ")")
-- ERROR:
File "XXXX", line 6
    print("var("giseli jardim: ")")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:39:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim: ") 
# Impressao de saidas
print("var(" giseli jardim: ")")
-- ERROR:
File "XXXX", line 6
    print("var(" giseli jardim: ")")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:39:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim: ") 
# Impressao de saidas
print("var= giseli jardim: ")
-- OUTPUT:
var= giseli jardim:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 17:40:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("giseli jardim: ") 
# Impressao de saidas
print("var= giseli jardim: ")
-- EXECUTION TIME:
0.196441
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
var= giseli jardim:
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
var= giseli jardim:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:11:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: ") 
# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:11:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: ") 
# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.131877
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
